<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.infsolution.bulletin.CadAulaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txt_cad_aula_titulo"
        android:textSize="14pt"
        android:textColor="@android:color/darker_gray"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_nome_materia"
        android:textSize="10pt"
        />
    <EditText
        android:id="@+id/edt_nome_materia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_materia"
        android:textSize="10pt"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_dia"
        android:textSize="10pt"
        />
    <EditText
        android:id="@+id/edt_dia_aula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_dia_aula"
        android:textSize="10pt"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_hora"
        android:textSize="10pt"
        />
    <EditText
        android:id="@+id/edt_hora_aula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_hora_aula"
        android:textSize="10pt"
        />
    <Button
        android:id="@+id/bt_cad_aula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_cadastro"
        android:onClick="cadAula"

        />
</LinearLayout>
