<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.infsolution.bulletin.CadMateriaActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/txv_cad_mat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_cad_materia"
            android:textSize="12pt"
            android:textColor="@android:color/darker_gray"
            android:layout_gravity="center_horizontal"
            />

        <ImageButton
            android:id="@+id/bt_enviar_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scaleType="center"
            android:src="@drawable/icon"
            android:onClick="selectImage"
            />
        <TextView
            android:id="@+id/txv_nome_mat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_nome_materia"
            android:textSize="10pt"
            android:layout_gravity="left"
            />

        <EditText
            android:id="@+id/edt_cad_nome_materia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nome_materia"
            android:textSize="10pt"
            />
        <TextView
            android:id="@+id/txv_nome_prof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_nome_professor"
            android:textSize="10pt"
            android:layout_gravity="left"
            />
        <EditText
            android:id="@+id/edt_cad_nome_professor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nome_professor"
            android:textSize="10pt"
            />

        <Button
            android:id="@+id/cad_new_materia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_cadastro"
            android:textSize="10pt"
            android:onClick="cadNewMateria"
            />
    </LinearLayout>
    </ScrollView>
</LinearLayout>
