<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.infsolution.bulletin.CadPessoa">

    <TextView
        android:text="@string/txt_cad_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="9pt"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cad_nome"
        android:textColor="@android:color/widget_edittext_dark"
        android:textSize="8pt"
        />
    <EditText
        android:id="@+id/etx_nome_pessoa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cad_matr"
        android:textColor="@android:color/widget_edittext_dark"
        android:textSize="8pt"
        />
    <EditText
        android:id="@+id/etx_matricula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/but_cad_pessoa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/bt_cadastro"
        android:onClick="newCadPessoa"
        />
</LinearLayout>
